--- a/app/src/main/res/layout/card_yemek.xml
+++ b/app/src/main/res/layout/card_yemek.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/yemekCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
