--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -45,6 +45,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kalam_bold"
         android:text="Olsada Yesek"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
