--- a/app/src/main/res/layout/fragment_detay.xml
+++ b/app/src/main/res/layout/fragment_detay.xml
@@ -21,9 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/kalam_bold"
         android:text="Sepete Ekle"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textFieldAdet" />
 
@@ -33,7 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/kalam"
         android:text="TextView"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -45,7 +48,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/kalam"
         android:text="TextView"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textViewYemekAdiDetay"
         app:layout_constraintStart_toStartOf="@+id/textViewYemekAdiDetay"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -65,6 +70,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="155dp"
             android:layout_height="55dp"
+            android:fontFamily="@font/kalam"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textStyle="bold" />
@@ -99,6 +105,7 @@
         android:layout_marginTop="32dp"
         android:src="@drawable/remove_circle_32"
         app:layout_constraintEnd_toStartOf="@+id/textFieldAdet"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -108,6 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/kalam"
         android:text="Sipariş Adet Sayısı"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +128,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/kalam"
         android:text="Yemek Fiyatı :"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -129,7 +139,9 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/kalam"
         android:text="Yemek Fiyatı :"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textViewYemekAdiDetay"
         app:layout_constraintEnd_toStartOf="@+id/textViewYemekAdiDetay"
         app:layout_constraintHorizontal_bias="0.5"
