--- a/app/src/main/res/layout/fragment_sepet.xml
+++ b/app/src/main/res/layout/fragment_sepet.xml
@@ -26,20 +26,32 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
-        android:layout_width="209dp"
-        android:layout_height="314dp"
+        android:layout_width="410dp"
+        android:layout_height="409dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.542"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/animation1" />
+        app:lottie_rawRes="@raw/animation_basket" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView3"
+        android:layout_width="351dp"
+        android:layout_height="430dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.458"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/animation_alisveris" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -76,6 +88,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="310dp"
+        android:layout_height="91dp"
+        android:layout_marginBottom="68dp"
+        android:fontFamily="@font/kalam_bold"
+        android:text="Alışverişiniz Tamamlandı Afiyet Olsun"
+        android:textAlignment="center"
+        android:textColor="@color/md_theme_light_secondary"
+        android:textSize="24sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAlisverisiTamamla"
+        app:layout_constraintEnd_toEndOf="@+id/buttonAlisverisiTamamla"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="@+id/buttonAlisverisiTamamla" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
