--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.ProfilFragment" >
+    android:background="@drawable/background"
+    tools:context=".ui.fragment.ProfilFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textFieldEmail"
-        android:hint="Email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="82dp"
         android:layout_marginStart="118dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="138dp"
         android:layout_marginBottom="9dp"
+        android:hint="Email"
         app:errorEnabled="true"
         app:helperTextEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/textFieldSifre"
@@ -33,8 +34,8 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textFieldSifre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="82dp"
         android:layout_marginStart="118dp"
         android:layout_marginEnd="138dp"
         android:layout_marginBottom="22dp"
@@ -62,7 +63,7 @@
         android:layout_width="0dp"
         android:layout_height="378dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
@@ -105,5 +106,18 @@
         android:text="Hesabın yok mu?"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLoginOrCreate" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/kalam_bold"
+        android:text="Hosgeldiniz"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textFieldEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.401"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
