--- a/app/src/main/res/layout/fragment_detay.xml
+++ b/app/src/main/res/layout/fragment_detay.xml
@@ -140,7 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kalam"
-        android:text="Yemek Fiyatı :"
+        android:text="Yemek Adı :"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textViewYemekAdiDetay"
         app:layout_constraintEnd_toStartOf="@+id/textViewYemekAdiDetay"
